add writing out variables
