# src/main/java/com/mendix/ux/sassaas/SessionsController.java
@@ -1,9 +1,11 @@
 package com.mendix.ux.sassaas;
 
 import com.mendix.ux.sassaas.specs.api.SessionsApi;
+import com.mendix.ux.sassaas.specs.model.KeyValue;
 import com.mendix.ux.sassaas.specs.model.ResultResponse;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
+import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
@@ -13,6 +15,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
+import java.util.List;
 
 @RestController
 @RequestMapping("/v1/sessions/{sessionId}")
@@ -23,6 +26,8 @@ public class SessionsController implements SessionsApi {
 
     @Autowired
     HttpServletRequest request;
+
+    private final String VARIABLE_FILENAME = "custom_variables.json";
 
     @Override
     @RequestMapping(value="/logo", method = RequestMethod.POST)
@@ -40,6 +45,24 @@ public class SessionsController implements SessionsApi {
         }
         ResultResponse result = new ResultResponse();
         result.setMessage("Upload completed");
+        return result;
+    }
+
+    @Override
+    @RequestMapping(value="/variables", method = RequestMethod.PUT)
+    public ResultResponse setVariables(@PathVariable("sessionId") String sessionId, @RequestBody List<KeyValue> variables) throws Exception {
+        File outfile = new File(getSessionDir(sessionId), VARIABLE_FILENAME);
+        JSONObject jsonObject = new JSONObject();
+        for (KeyValue item : variables)
+            jsonObject.put(item.getKey(), item.getValue());
+        OutputStream outputStream = new FileOutputStream(outfile);
+        try {
+            outputStream.write(jsonObject.toString(2).getBytes());
+        } finally {
+            IOUtils.closeQuietly(outputStream);
+        }
+        ResultResponse result = new ResultResponse();
+        result.setMessage("Variables are saved");
         return result;
     }
 
